# gmail-bookmark-service

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  LLM-OVERVIEW.md  README.md  gmail-bookmark-service.service  homelab.yaml  pyproject.toml  run.py
src/gmail_bookmark_service/: __init__.py  main.py  settings.py
src/gmail_bookmark_service/api/: __init__.py  health.py  webhook.py
src/gmail_bookmark_service/auth/: __init__.py  gmail_auth.py
src/gmail_bookmark_service/database/: __init__.py  connection.py  models.py
src/gmail_bookmark_service/processing/: __init__.py  message_processor.py  pubsub_manager.py
src/gmail_bookmark_service/utils/: __init__.py  logging.py  reliability.py
